now character card is played with id, implemented undo commands and fix some bugs